Added Experience in Luminar

--- a/Resume.html
+++ b/Resume.html
@@ -302,6 +302,7 @@
                 <h5 style="margin-top: 10px; font-family: 'Martel Sans', sans-serif; font-size: 22px;">Worked in
                   Computer Assembly and Management</h5>
               </li>
+
             </ul>
           </div>
 
@@ -408,7 +409,7 @@
         <div class="col-3 otrSkills">
           <h3 style=" color: white; text-align: center; padding: 5px; margin-top: 10px;" id="buttons"><button
             type="button" class="btn btn-grad"
-            style="width: 100%; font-size: 28px; font-family: 'Montserrat', sans-serif;">OTHER SKILLS</button></h3>
+            style="width: 100%; font-size: 28px; font-family: 'Montserrat', sans-serif; margin-left:30px">OTHER SKILLS</button></h3>
         <h4 style="margin-top: 20PX; font-family: 'Assistant', sans-serif; font-weight: 300;margin-left:50px;color: white;">MongoDB</h4>
         <h4 style="padding-top: 3px; font-family: 'Assistant', sans-serif; font-weight: 300;margin-left: 50px;color: white;">Node.js
         </h4>
@@ -436,19 +437,19 @@
             <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-info">
               <div class="ms-2 me-auto">
                 <div class="fw-bold" style="font-size:20px ;">WeatherAPI</div>
-                An Api to get the weather detials of a given place
+                A Web Application to get the weather detials of a given place using API.
               </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-info">
               <div class="ms-2 me-auto">
                 <div class="fw-bold" style="font-size:20px ;">BankApp</div>
-                A Web Application for users to interact with various banking events such as deposit,withdraw etc.
+                A Web Application for users to interact with various banking events such as deposit,withdraw using Angular, Express, MongoDB and Node.js
               </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-info">
               <div class="ms-2 me-auto">
                 <div class="fw-bold" style="font-size:20px ;">ReminderApp</div>
-                A reminder Web application to enable users to add, view the reminders and more ..
+                A reminder Web application to enable users to add, view the reminders and more using Angular, Express, MongoDB and Node.js
               </div>
             </li>
           </ol>
