--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 
     }
 
+    @media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+}
+
     a:active {
        text-decoration: none;
        }
