--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
   [class*="col-"] {
     width: 100%;
   }
+  [education]{
+      margin-left: 30px;
+  }
 }
 
     a:active {
@@ -211,7 +214,7 @@
             success.</P>
         </div>
 
-        <div class="col-lg-8 col-md-8 col-sm-8" style="margin-left: 50px;">
+        <div class="col-lg-8 col-md-8 col-sm-8 education" style="margin-left: 50px;">
           <h3 style="color: white; text-align: center; padding: 5px; margin-top: 40px;" id="buttons"><button
               type="button" class="btn btn-grad"
               style="width: 100%; font-size: 28px; font-family: 'Montserrat', sans-serif;">EDUCATION</button></h3>
@@ -283,7 +286,7 @@
     </div>
     <div class="container123">
       <div class="row">
-        <div class="col-3" style="margin-left: 20px; text-align: center; color: white;">
+        <div class="col-3 address" style="margin-left: 20px; text-align: center; color: white;">
           <h3 style=" color: white; text-align: center; padding: 5px; margin-top: 10px;" id="buttons"><button
               type="button" class="btn btn-grad"
               style="width: 100%; font-size: 28px; font-family: 'Montserrat', sans-serif;">ADDRESS</button></h3>
@@ -298,7 +301,7 @@
           <h4 style="padding-top: 3px;font-family: 'Assistant', sans-serif; font-weight: 300;">Mob: 7892138680</h4>
         </div>
 
-        <div class="col-8" style="margin-left: 50px; ">
+        <div class="col-8 workexp" style="margin-left: 50px;  " >
           <h3 style="color: white; text-align: center; padding: 5px; margin-top: 20px ;" id="buttons"><button
               type="button" class="btn btn-grad"
               style="width: 100%; font-size: 28px; font-family: 'Montserrat', sans-serif;">WORK EXPERIENCE</button></h3>
