media query done for mobile devices

--- a/index.html
+++ b/index.html
@@ -35,9 +35,58 @@
   [class*="col-"] {
     width: 100%;
   }
-  [education]{
-      margin-left: 30px;
+ 
+}
+
+@media only screen and (max-width: 769px) {
+  
+  .wadu{
+    margin-left: -40px;
+    width: 95%;
   }
+  .education{
+    margin-left: -30px;
+  }
+  .address{
+    width: 90%;
+ 
+  }
+  .row2{
+    margin-left: -20px;
+    margin-right: 10px;
+  }
+  .obje{
+    margin-left: 30px;
+  }
+  .workexp{
+    left: -30px;
+    width: 90%;
+  }
+  .language{
+  left: -20px;
+  }
+  .hobbies{
+    padding-top: 260px;
+    margin-left: -30px;
+    width: 90%;
+  }
+ 
+  .skillscard{
+width: 100%;
+  }
+  .skilcard{
+    width: 80%;
+  }
+  .hel{
+    margin-left: -30px;
+  }
+  .otrSkills{
+width: 90%;
+  }
+.projects{
+  width: 90%;
+  margin-left: -50px;
+}
 }
 
     a:active {
@@ -197,8 +246,8 @@
   </div>
   <div class="container" id="cont1">
     <div class="container123" id="container2">
-      <div class="row flex-row">
-        <div class="col-lg-3 col-md-3 col-sm-3" style="margin-left: 30px;">
+      <div class="row flex-row wadu">
+        <div class="col-lg-3 col-md-3 col-sm-3 obje" style="margin-left: 30px;">
           <h3 style="color: white; text-align: center; padding: 5px; margin-top: 40px; " id="buttons"><button
               type="button" class="btn btn-grad"
               style="width: 100%; font-size: 28px;font-family: 'Montserrat', sans-serif;">OBJECTIVE</button></h3>
@@ -284,8 +333,8 @@
         </div>
       </div>
     </div>
-    <div class="container123">
-      <div class="row">
+    <div class="container12345">
+      <div class="row row2">
         <div class="col-3 address" style="margin-left: 20px; text-align: center; color: white;">
           <h3 style=" color: white; text-align: center; padding: 5px; margin-top: 10px;" id="buttons"><button
               type="button" class="btn btn-grad"
@@ -353,9 +402,9 @@
       </div>
     </div>
 
-    <div class="container123">
-      <div class="row">
-        <div class="col-3" style="margin-left: 20px; text-align: center; color: white; margin-top: -90px;">
+    <div class="container123 ">
+      <div class="row ">
+        <div class="col-3 hobbies" style="margin-left: 20px; text-align: center; color: white; margin-top: -90px;">
           <h3 style="color: white; text-align: center; padding: 5px; margin-top: -120px ;" id="buttons"><button
               type="button" class="btn btn-grad"
               style="width: 100%; font-size: 28px; font-family: 'Montserrat', sans-serif;">HOBBIES</button></h3>
@@ -374,12 +423,12 @@
           <h4 style="padding-top: 5px; font-family: 'Assistant', sans-serif; font-weight: 300;">Determination</h4>
         </div>
 
-        <div class="col-8" style="margin-left: 50px; color: white; margin-bottom: 50px;">
+        <div class="col-8 skilcard" style="margin-left: 50px; color: white; margin-bottom: 50px;">
 
           <h3 style="color: white; text-align: center; padding: 5px; margin-top: 10px ;" id="buttons"><button
               type="button" class="btn btn-grad"
               style="width: 100%; font-size: 28px; font-family: 'Montserrat', sans-serif;">SKILLS</button> </h3>
-          <div class="language" id="cards">
+          <div class="skillscard" id="cards">
 
             <!-- <h5>Photo & Video Editing</h5>
             <H5>PC Hardware Assembly</H5>
@@ -437,7 +486,7 @@
 
 
 
-        <div class="col-8" >
+        <div class="col-8 projects" >
           <h3 style="color: white; text-align: center; padding: 5px; margin-top: 10px ;" id="buttons"><button
               type="button" class="btn btn-grad"
               style="width: 100%; font-size: 28px; font-family: 'Montserrat', sans-serif; margin-left: 80px;">Projects
