again edited media query

--- a/index.html
+++ b/index.html
@@ -42,17 +42,22 @@
   
   .wadu{
     margin-left: -40px;
-    width: 95%;
+    width: 100%;
+  }
+  .obje{
+    width: 90%;
   }
   .education{
-    margin-left: -30px;
+
+  
   }
   .address{
-    width: 90%;
+    width: 80%;
+    margin-left: 40px;
  
   }
   .row2{
-    margin-left: -20px;
+    margin-left: -30px;
     margin-right: 10px;
   }
   .obje{
@@ -67,15 +72,16 @@
   }
   .hobbies{
     padding-top: 260px;
-    margin-left: -30px;
-    width: 90%;
+    margin-left: 30px;
+    width: 80%;
   }
  
   .skillscard{
 width: 100%;
   }
   .skilcard{
-    width: 80%;
+    width: 100%;
+    margin-left: -30px;
   }
   .hel{
     margin-left: -30px;
@@ -247,7 +253,7 @@ width: 90%;
   <div class="container" id="cont1">
     <div class="container123" id="container2">
       <div class="row flex-row wadu">
-        <div class="col-lg-3 col-md-3 col-sm-3 obje" style="margin-left: 30px;">
+        <div class="col-lg-3 col-md-3 col-sm-3 obje" style="padding-left: 30px;">
           <h3 style="color: white; text-align: center; padding: 5px; margin-top: 40px; " id="buttons"><button
               type="button" class="btn btn-grad"
               style="width: 100%; font-size: 28px;font-family: 'Montserrat', sans-serif;">OBJECTIVE</button></h3>
@@ -263,7 +269,7 @@ width: 90%;
             success.</P>
         </div>
 
-        <div class="col-lg-8 col-md-8 col-sm-8 education" style="margin-left: 50px;">
+        <div class="col-lg-8 col-md-8 col-sm-8 education" style="padding-left: 50px;">
           <h3 style="color: white; text-align: center; padding: 5px; margin-top: 40px;" id="buttons"><button
               type="button" class="btn btn-grad"
               style="width: 100%; font-size: 28px; font-family: 'Montserrat', sans-serif;">EDUCATION</button></h3>
@@ -335,7 +341,7 @@ width: 90%;
     </div>
     <div class="container12345">
       <div class="row row2">
-        <div class="col-3 address" style="margin-left: 20px; text-align: center; color: white;">
+        <div class="col-3 address" style="padding-left: 20px; text-align: center; color: white;">
           <h3 style=" color: white; text-align: center; padding: 5px; margin-top: 10px;" id="buttons"><button
               type="button" class="btn btn-grad"
               style="width: 100%; font-size: 28px; font-family: 'Montserrat', sans-serif;">ADDRESS</button></h3>
@@ -350,7 +356,7 @@ width: 90%;
           <h4 style="padding-top: 3px;font-family: 'Assistant', sans-serif; font-weight: 300;">Mob: 7892138680</h4>
         </div>
 
-        <div class="col-8 workexp" style="margin-left: 50px;  " >
+        <div class="col-8 workexp" style="padding-left: 80px; " >
           <h3 style="color: white; text-align: center; padding: 5px; margin-top: 20px ;" id="buttons"><button
               type="button" class="btn btn-grad"
               style="width: 100%; font-size: 28px; font-family: 'Montserrat', sans-serif;">WORK EXPERIENCE</button></h3>
@@ -404,7 +410,7 @@ width: 90%;
 
     <div class="container123 ">
       <div class="row ">
-        <div class="col-3 hobbies" style="margin-left: 20px; text-align: center; color: white; margin-top: -90px;">
+        <div class="col-3 hobbies" style="padding-left: 20px; text-align: center; color: white; margin-top: -90px;">
           <h3 style="color: white; text-align: center; padding: 5px; margin-top: -120px ;" id="buttons"><button
               type="button" class="btn btn-grad"
               style="width: 100%; font-size: 28px; font-family: 'Montserrat', sans-serif;">HOBBIES</button></h3>
@@ -423,7 +429,7 @@ width: 90%;
           <h4 style="padding-top: 5px; font-family: 'Assistant', sans-serif; font-weight: 300;">Determination</h4>
         </div>
 
-        <div class="col-8 skilcard" style="margin-left: 50px; color: white; margin-bottom: 50px;">
+        <div class="col-8 skilcard" style="padding-left: 70px; color: white; margin-bottom: 50px;">
 
           <h3 style="color: white; text-align: center; padding: 5px; margin-top: 10px ;" id="buttons"><button
               type="button" class="btn btn-grad"
