card text hidden in mobile

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@ width: 100%;
   .otrSkills{
 width: 90%;
   }
+
+  .card-text{
+    display: none;
+  }
 .projects{
   width: 90%;
   margin-left: -50px;
