project list color changed

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ width: 90%;
             <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-info">
               <div class="ms-2 me-auto">
                 <a href="https://vysakh-restaurant.netlify.app/">
-                  <div class="fw-bold" style="font-size:20px ; text-decoration: none !important; color: white; ">Restaurant Listing</div>
+                  <div class="fw-bold" style="font-size:20px ; text-decoration: none !important;color: rgb(253,79,50);">Restaurant Listing</div>
                   <p style="text-decoration: none !important; color: white;">A Web Application to show Restaurant details by fetching through API using React and Redux.</p>
                                 </div>
                 </a>
@@ -514,7 +514,7 @@ width: 90%;
               
                 <div class="ms-2 me-auto">
                   <a href="https://netflix-ux.netlify.app/">
-                  <div class="fw-bold" style="font-size:20px ;  text-decoration: none !important; color: white; ">NETFLIX UI </div>
+                  <div class="fw-bold" style="font-size:20px ;  text-decoration: none !important; color: rgb(253,79,50);">NETFLIX UI </div>
                   <p style=" text-decoration: none !important; color: white; ">A webisite on Netflix UI using React and Axios.</p>
                 </div>
               </a>
@@ -522,7 +522,7 @@ width: 90%;
             <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-info">
               <div class="ms-2 me-auto">
                 <a href="">
-                  <div class="fw-bold" style="font-size:20px ;text-decoration: none !important; color: white; ">Watch Website </div>
+                  <div class="fw-bold" style="font-size:20px ;text-decoration: none !important;color: rgb(253,79,50);">Watch Website </div>
                   <p style="text-decoration: none !important; color: white; ">Created a webpage of a watch company using html,css and bootstrap..</p>
                 </a>
               </div>
@@ -532,7 +532,7 @@ width: 90%;
             <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-info">
               <div class="ms-2 me-auto">
                 <a href="">
-                  <div class="fw-bold" style="font-size:20px ;text-decoration: none !important; color: white; ">BankApp</div>
+                  <div class="fw-bold" style="font-size:20px ;text-decoration: none !important;color: rgb(253,79,50);">BankApp</div>
                   <p style="text-decoration: none !important; color: white; ">A Web Application for users to interact with various banking events such as deposit,withdraw using Angular, Express, MongoDB and Node.js</p>
                 </a>
               </div>
@@ -540,7 +540,7 @@ width: 90%;
             <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-info">
               <div class="ms-2 me-auto">
                 <a href="">
-                  <div class="fw-bold" style="font-size:20px ;text-decoration: none !important; color: white; ">ReminderApp</div>
+                  <div class="fw-bold" style="font-size:20px ;text-decoration: none !important;color: rgb(253,79,50);">ReminderApp</div>
                   <p style="text-decoration: none !important; color: white; ">A reminder Web application to enable users to add, view the reminders and more using Angular, Express, MongoDB and Node.js</p>
                 </a>
               </div>
